[gd_scene load_steps=18 format=3 uid="uid://kwkop7rbbb2p"]

[ext_resource type="Script" uid="uid://dv0iajoytx5ih" path="res://Scripts/UI/stall_ui.gd" id="1_7a2fk"]
[ext_resource type="StyleBox" uid="uid://doow0jlxkj7je" path="res://Resources/Styles/Panel/wood_color_panel.tres" id="1_tlkap"]
[ext_resource type="Script" uid="uid://bcyxinf68ccvt" path="res://Scenes/UI/basket.gd" id="2_c87j1"]

[sub_resource type="LabelSettings" id="LabelSettings_43idc"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_6mu0p"]
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c87j1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tlkap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uno1m"]
bg_color = Color(0.16446, 0.16446, 0.16446, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvtb5"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.282353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3crmq"]
content_margin_top = 8.0
content_margin_bottom = 0.0
draw_center = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8vm8c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfmn8"]

[sub_resource type="LabelSettings" id="LabelSettings_7a2fk"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cw388"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.470588, 0.509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6mu0p"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(2.16588e-07, 0.361914, 0.393021, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43idc"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.470588, 0.509804, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_cw388"]
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxFlat_cw388")
Button/styles/hover = SubResource("StyleBoxFlat_6mu0p")
Button/styles/normal = SubResource("StyleBoxFlat_43idc")
Button/styles/pressed = SubResource("StyleBoxFlat_6mu0p")

[node name="StallUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 380.0
offset_top = 135.0
offset_right = -398.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("1_tlkap")
script = ExtResource("1_7a2fk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Coins: 0"
label_settings = SubResource("LabelSettings_43idc")

[node name="ShopNameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Shop Name"
label_settings = SubResource("LabelSettings_6mu0p")
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
tab_alignment = 1
current_tab = 0
clip_tabs = false

[node name="Buy" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsToBuy" type="HFlowContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BasketContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.28
theme_override_font_sizes/font_size = 24
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_c87j1")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_tlkap")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_uno1m")
theme_override_styles/panel = SubResource("StyleBoxFlat_jvtb5")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_3crmq")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_8vm8c")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_jfmn8")
tab_alignment = 1
current_tab = 0

[node name="Basket" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BasketItems" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 16
script = ExtResource("2_c87j1")

[node name="TotalBuyAmount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total: 123 coins"
label_settings = SubResource("LabelSettings_7a2fk")
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = SubResource("Theme_cw388")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Purchase"

[node name="Sell" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsToSell" type="HFlowContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SellButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = SubResource("Theme_cw388")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Sell
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Buy/MarginContainer/HBoxContainer/BasketContainer/Basket/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TabContainer/Sell/MarginContainer/VBoxContainer/HBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
